--- a/SimpleOps/Guías/Certificado de Firma Digital Andes.html
+++ b/SimpleOps/Guías/Certificado de Firma Digital Andes.html
@@ -10,6 +10,29 @@
 
 <body>
 
+    <style> /* Temporalmente se copia textual desde Estilos.css para poder que funcione con htmlpreview.github.io. */
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            width: 800px;
+            margin: auto;
+        }
+
+        img {
+            display: block;
+            margin: auto;
+            margin-top: 80px;
+            margin-bottom: 80px;
+            max-width: 800px;
+        }
+
+        h1, h2 {
+            margin-top: 80px;
+            margin-bottom: 30px;
+        }
+
+    </style>
+
     <h2>Obtención de Certificado de Firma Digital con Andes SCD</h2>
 
     <p>
