--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -10,6 +10,29 @@
 
 <body>
 
+    <style> /* Temporalmente se copia textual desde Estilos.css para poder que funcione con htmlpreview.github.io. */
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            width: 800px;
+            margin: auto;
+        }
+
+        img {
+            display: block;
+            margin: auto;
+            margin-top: 80px;
+            margin-bottom: 80px;
+            max-width: 800px;
+        }
+
+        h1, h2 {
+            margin-top: 80px;
+            margin-bottom: 30px;
+        }
+
+    </style>
+
     <h1>Habilitación de Facturación Electrónica DIAN con SimpleOps</h1>
     <p>
         Para que <b>SimpleOps</b> pueda generar tus facturas electrónicas válidas legalmente es necesario que habilites a tu
@@ -121,9 +144,9 @@
 
 
     <p>
-        Si aún no facturas electrónicamente y no tienes certificado de firma digital puedes seguir 
+        Si aún no facturas electrónicamente y no tienes certificado de firma digital puedes seguir
         <a href="Certificado de Firma Digital Andes.html">esta guía</a> para
-        adquirirlo con Andes SCD. 
+        adquirirlo con Andes SCD.
         <b>SimpleOps</b> no tiene ninguna relación con Andes SCD ni recibe comisión por realizar esta recomendación.
     </p>
 
