--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -159,7 +159,37 @@
         a facturar electrónicamente.
     </p>
 
+    <h3>Instalación SimpleOps</h3>
+    <p>
+        <b>SimpleOps</b> se encuentra en una etapa preliminar de desarrollo, por lo tanto aún no cuenta con instalador y la mejor
+        manera de ejecutarlo es directamente desde el código fuente. Para ejecutar el código necesitarás
+        <a href="https://visualstudio.microsoft.com/es/vs/community/">Visual Studio</a>. Si quieres ejecutar <b>SimpleOps</b> sin necesidad
+        de instalar Visual Studio me puedes escribir a vixark@outlook.com.
+    </p>
 
+    <p>
+        Crea una carpeta en tu computador con el nombre <i>SimpleOps</i> (por ejemplo, D:\Programas\SimpleOps) y crea dentro de ella las 
+        siguientes 6 nuevas carpetas:
+        <i>Código</i>, <i>Datos</i>, <i>Firma Electrónica</i>, <i>Opciones</i>, <i>Plantillas Documentos</i> y
+        <i>Programa Tercero</i>. Asegúrate de crearlas exactamente cómo están escritas (incluyendo tildes) para que no tengas
+        contratiempos más adelante. Abre Visual Studio y haz clic en <i>Tareas Iniciales > Clonar un repositorio</i>. En <i>Ubicación del repositorio</i>
+        escribe https://github.com/vixark/SimpleOps.git y en <i>Ruta de acceso</i> selecciona tu carpeta <i>\SimpleOps\Código</i> y haz clic en 
+        <i>Clonar</i>.
+    </p>
+    <img src="Imagenes/Habilitación Facturación Electrónica DIAN/ClonarRepositorio.png" />
+
+
+    <p>
+        Abre el <i>Explorador de Soluciones</i> y haz doble clic en <i>SimpleOps.sln</i>.
+    </p>
+    <img src="Imagenes/Habilitación Facturación Electrónica DIAN/AbrirSimpleOpsSln.png" />
+
+    <p>
+        La próxima vez que vayas a abrir el código de <b>SimpleOps</b> abre
+        el archivo <i>\SimpleOps\Código\SimpleOps.sln</i> y actualiza el código a la última versión en GitHub haciendo clic en la esquina inferior derecha
+        en <i>master > Recuperar cambios</i>.
+    </p>
+    <img src="Imagenes/Habilitación Facturación Electrónica DIAN/ActualizarCambiosSimpleOpsSln.png" />
 
 </body>
 
