--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -188,7 +188,7 @@
     <p>
         Con esto abrirás el código por primera vez. La próxima vez que vayas a abrir el código abre
         el archivo <i>\SimpleOps\Código\SimpleOps.sln</i> y actualiza el código a la última versión en GitHub haciendo clic en la esquina inferior derecha
-        en <i>master > "Pull"</i>.
+        en <i>master > "Pull"</i>. Si te sale un error de sincronización, en Cambios de GIT > 
     </p>
     <img src="Imagenes/Habilitación Facturación Electrónica DIAN/ActualizarCambiosSimpleOpsSln.png" />
 
