--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -168,22 +168,26 @@
     </p>
 
     <p>
-        Crea una carpeta en tu computador con el nombre <i>SimpleOps</i> (por ejemplo, D:\Programas\SimpleOps) y crea dentro de ella las
-        siguientes 2 nuevas carpetas: <i>Código</i> y <i>Firma Electrónica</i>.
-        Asegúrate de crearlas exactamente cómo están escritas (incluyendo tildes) para que no tengas
-        contratiempos más adelante.
+        Crea una carpeta en tu computador con el nombre <i>SimpleOps</i> y crea dentro de ella las
+        siguientes 2 nuevas carpetas: <i>Código</i> y <i>Firma Electrónica</i>. Para fines de esta guía la carpeta donde creaste la carpeta
+        <i>SimpleOps</i> se llamará <i>[CarpetaProgramas]</i>, por ejemplo si la creaste en <i>D:\Programas\SimpleOps</i>,
+        tu <i>[CarpetaProgramas]</i> será <i>D:\Programas</i>.
+        Asegúrate de crear las carpetas exactamente cómo están escritas (incluyendo tildes) para que después no tengas
+        contratiempos.
     </p>
 
     <p>
-        Copia y pega (no lo cortes) tu archivo PFX con tu certificado de firma digital en la carpeta <i>\SimpleOps\Firma Electrónica</i> y renómbralo a
-        <i>Certificado.pfx</i>. Crea un archivo de texto (extensión .txt) en la carpeta <i>\SimpleOps\Firma Electrónica</i>, nómbralo <i>Clave.txt</i>,
+        Copia y pega (no lo cortes) tu archivo PFX con tu certificado de firma digital en <i>[CarpetaProgramas]\SimpleOps\Firma Electrónica</i> y renómbralo a
+        <i>Certificado.pfx</i>. Crea un archivo de texto (extensión .txt) en <i>[CarpetaProgramas]\SimpleOps\Firma Electrónica</i>, 
+        nómbralo <i>Clave.txt</i>,
         ábrelo, escribe tu clave del certificado de firma digital sin agregar espacios ni nuevas líneas y guárdalo.
     </p>
     <img src="Imagenes/Habilitación Facturación Electrónica DIAN/ArchivosFirmaElectrónica.png" />
 
     <p>
         Abre Visual Studio y haz clic en <i>Tareas Iniciales > Clonar un repositorio</i>. En <i>Ubicación del repositorio</i>
-        escribe https://github.com/vixark/SimpleOps.git y en <i>Ruta de acceso</i> selecciona tu carpeta <i>\SimpleOps\Código</i> y haz clic en
+        escribe https://github.com/vixark/SimpleOps.git y en <i>Ruta de acceso</i> selecciona <i>[CarpetaProgramas]\SimpleOps\Código</i> 
+        y haz clic en
         <i>Clonar</i>.
     </p>
     <img src="Imagenes/Habilitación Facturación Electrónica DIAN/ClonarRepositorio.png" />
@@ -196,25 +200,37 @@
 
     <p>
         Con esto abrirás el código por primera vez. La próxima vez que vayas a abrir el código abre
-        el archivo <i>\SimpleOps\Código\SimpleOps.sln</i> y actualiza el código a la última versión en GitHub haciendo clic en la esquina inferior derecha
+        el archivo <i>[CarpetaProgramas]\SimpleOps\Código\SimpleOps.sln</i> y actualiza el código a la última versión en GitHub haciendo clic 
+        en la esquina inferior derecha
         en <i>master > "Pull"</i>. 
     </p>
     <img src="Imagenes/Habilitación Facturación Electrónica DIAN/ActualizarCambiosSimpleOpsSln.png" />
 
     <p>
-        Si te sale el error <i>No se pueden incorporar los cambios...</i>, en <i>Cambios de GIT > Cambios</i> haz clic derecho
-        en el archivo que cambiaste (usualmente <i>OpcionesEquipo.cs</i>) y haz clic en <i>Deshacer Cambios</i> e intenta actualizar el código nuevamente.
+        Si te sale el error <i>No se pueden incorporar los cambios...</i>, en <i>Cambios de GIT > Cambios</i> haz <i>clic derecho > Deshacer Cambios</i>
+        en los archivos que cambiaste (usualmente <i>OpcionesEquipo.cs</i> y <i>Global.cs</i>) e intenta
+        actualizar el código nuevamente.
         Ten cuidado si has realizado
-        personalizaciones adicionales a las indicadas en esta guía porque te podrían aparecer más archivos y deberás analizar con más cuidado
-        cómo proceder para evitar perder tus personalizaciones.
+        cambios al código adicionales a los indicados en esta guía porque te podrían aparecer más archivos en conflicto y deberás analizar con
+        más cuidado
+        cómo proceder para evitar perder tus cambios.
     </p>
 
     <p>
         Busca (Ctrl + F) el texto <i>Public string RutaAplicación</i> para que encuentres el siguiente fragmento de código y reemplaza en los 4
-        textos indicados <i>D:\Programas</i> por la ruta de la carpeta donde está tu carpeta <i>\SimpleOps</i>.
-        Esto deberás hacerlo cada vez que actualices el código, aunque si usas la ruta <i>D:\Programas\</i> no tendrás que hacerlo.
+        textos indicados <i>D:\Programas</i> por tu <i>[CarpetaProgramas]</i>.
+        Esto deberás hacerlo nuevamente si te salió el error <i>No se pueden incorporar los cambios...</i>.
     </p>
     <img src="Imagenes/Habilitación Facturación Electrónica DIAN/CambioRutasCódigo.png" />
+
+    <p>
+        Busca el texto <i>public static string RutaDesarrollo</i> para que encuentres el siguiente fragmento de código y reemplaza todo el texto
+        entre comillas por <i>[CarpetaProgramas]\SimpleOps\Código\SimpleOps</i>. Esto deberás hacerlo nuevamente si te salió el error
+        <i>No se pueden incorporar los cambios...</i>.
+    </p>
+    <img src="Imagenes/Habilitación Facturación Electrónica DIAN/RutaDesarrolloSimpleOps.png" />
+
+
 
 </body>
 
