--- a/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
+++ b/SimpleOps/Guías/Habilitación Facturación Electrónica DIAN.html
@@ -487,10 +487,17 @@
     </p>
 
     <p>
-        Abre el código, abre <i>SimpleOps > Estáticas > Global.cs</i>,  <i>true</i>.
-        Ejecuta <b>SimpleOps</b> (F5), espera unos segundos y te aparecerá un mensaje sobre, esto significa
-        que realizaste correctamente los pasos anteriores y que se creo la base de datos y todos los archivos necesarios para ejecutar <b>SimpleOps</b>.
-        Vuelve al código y suspende la ejecución (Shift + F5).
+        Ejecuta <b>SimpleOps</b> (F5), espera unos segundos y te aparecerá un mensaje sobre el envío de documentos electrónicos a la DIAN, léelo y
+        haz clic en <i>Aceptar</i>. Si realizaste correctamente todos los pasos anteriores te aparecerá un mensaje de Éxito que significa que
+        <b>SimpleOps</b> se comunicó con el servidor de la DIAN en nombre de tu empresa y pudo enviar exitósamente la primera factura electrónica
+        de prueba interna. Haz clic en Aceptar y se ejecutarán varias pruebas de otras facturas, notas débito y notas crédito, puedes volver al código
+        (Shift + F5) y suspender la ejecución cuando desees.
+    </p>
+
+    <p>
+        Abre la carpeta <div>[CarpetaProgramas]\SimpleOps\Documentos Electrónicos\[Año]\[Mes]-[Día]</div> donde encontrarás las representaciones
+        gráficas (Archivos PDFs) de los documentos de prueba que acabas de enviar a la DIAN (los archivos con <i>-I</i> son adecuados para imprimir
+        en impresoras blanco y negro) y las facturas electrónicas en sí (archivos XMLs).
     </p>
 
 
